hphp/hack/test/typecheck/dynamic_new4.php.exp
File "dynamic_new4.php", line 19, characters 14-18:
Cannot use dynamic new in strict mode (Naming[2060])
