hphp/hack/test/typecheck/dynamic_new4.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

class C {}

function f(): string {
  return 'C';
}

function g(): C {
  return new (f())();
}
